src/objects/Approved_Raw_Material__c.object
<CustomObject>
    <fields>
        <fullName>MFG_Name__c</fullName>
        <formula>RM_Approved_MFG__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFG Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Approved_MFG__c</fullName>
        <label>RM Approved MFG</label>
        <referenceTo>RM_Approved_MFG__c</referenceTo>
        <relationshipName>RM_MFG</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>R_Description__c</fullName>
        <formula>Raw_Material__r.R_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R-Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Number__c</fullName>
        <formula>Raw_Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R-Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipName>RM_MFG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Approved Raw Material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMAMFG-{000000000}</displayFormat>
        <label>RM-MFG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Raw Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>